--- a/Code.ipynb
+++ b/Code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,12 +11,13 @@
     "from nltk.corpus import *\n",
     "from nltk.stem.porter import *\n",
     "import os\n",
-    "from Constants import *"
+    "from Constants import *\n",
+    "import pickle\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,12 +130,24 @@
     "    process(i)\n",
     "\n",
     "for x in inverted_idx:\n",
-    "    inverted_idx[x] = sorted(inverted_idx[x], key=lambda y: -y[2])"
+    "    inverted_idx[x] = sorted(inverted_idx[x], key=lambda y: -y[2])\n",
+    "\n",
+    "dbfile = open('Inverted_index', 'ab')\n",
+    "pickle.dump(inverted_idx, dbfile) \n",
+    "dbfile.close()\n",
+    "\n",
+    "dbfile = open('Documents', 'ab')\n",
+    "pickle.dump(documents, dbfile) \n",
+    "dbfile.close()\n",
+    "\n",
+    "dbfile = open('Files', 'ab')\n",
+    "pickle.dump(files, dbfile) \n",
+    "dbfile.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -158,6 +171,18 @@
     }
    ],
    "source": [
+    "dbfile = open('Inverted_index', 'rb')     \n",
+    "inverted_idx = pickle.load(dbfile)\n",
+    "dbfile.close()\n",
+    "\n",
+    "dbfile = open('Documents', 'rb')     \n",
+    "documents = pickle.load(dbfile)\n",
+    "dbfile.close()\n",
+    "\n",
+    "dbfile = open('Files', 'rb')     \n",
+    "files = pickle.load(dbfile)\n",
+    "dbfile.close()\n",
+    "\n",
     "def query(query_str):\n",
     "    \"\"\"\n",
     "    Normalize query string and search in inverted index and retervive doc\n",
