--- a/Code.ipynb
+++ b/Code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,12 +42,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# list of all doc names\n",
-    "\n",
     "files = list()\n",
     "for dir in [r\"\\Auto\", r\"\\Property\"]:\n",
     "    cur_dir = r\".\\Docs\" + dir\n",
@@ -59,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,29 +158,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "my_path = root / \"Pickled_files\" / \"Inverted_index\"\n",
-    "dbfile = open(my_path, 'ab')\n",
+    "dbfile = open(my_path, 'wb')\n",
     "pickle.dump(inverted_idx, dbfile) \n",
     "dbfile.close()\n",
     "\n",
     "my_path = root / \"Pickled_files\" / \"Documents\"\n",
-    "dbfile = open(my_path, 'ab')\n",
+    "dbfile = open(my_path, 'wb')\n",
     "pickle.dump(documents, dbfile) \n",
     "dbfile.close()\n",
     "\n",
     "my_path = root / \"Pickled_files\" / \"Files\"\n",
-    "dbfile = open(my_path, 'ab')\n",
+    "dbfile = open(my_path, 'wb')\n",
     "pickle.dump(files, dbfile) \n",
     "dbfile.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,17 +202,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('deductible amounts 10.1 despite anything in this contract , the insurer shall be liable only for amounts in excess of the applicable deductible amount , if any , mentioned in this contract ; and any provision in this contract relating to an obligation of the insurer to pay an amount or to repair , rebuild or replace property that is damaged or lost shall be satisfied by paying the amount determined by deducting any applicable deductible amount from , the amount the insured would otherwise be entitled to recover , or the cost of repairing , rebuilding or replacing the property.deemed deductible amount ( 2 ) for the purposes of sub condition ( 1 ) , an amount that an insurer is not liable to pay by reason of subsection 261 ( 1 ) or ( 1.1 ) or 263 ( 5.1 ) or ( 5.2.1 ) of the insurance act shall be deemed to be a deductible amount under this contract.termination 11 . ', '.\\\\Docs\\\\Auto\\\\1215E.2.docx'), ('deductible we will pay only when a loss covered under section i or an expense covered under other coverages - section i exceeds the deductible shown in the declarations , and then we will pay only the amount exceeding the deductible.the deductible shall apply to all losses except losses paid under coverage d – loss of use and the following provisions of other coverages - section i : fire department service charge 5.locks refrigerated food spoilage credit card , fund transfer card , forgery and counterfeit money with respect to any one loss , if two or more deductibles under this policy apply to the loss , only the highest deductible amount will apply . ', '.\\\\Docs\\\\Property\\\\5105072011_booklet.docx'), ('the value of the loss or damage is based on actual cash value after taking into account depreciation.we will not pay more to repair the automobile than its actual cash value at the time it was damaged , less the deductible specified in your certificate of automobile insurance.we will pay the lower of the following : the cost to repair the loss or damage , less the deductible ; or the actual cash value of the automobile at the time it was damaged , less the applicable deductible . ', '.\\\\Docs\\\\Auto\\\\1215E.2.docx')]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def query(query_str):\n",
     "    \"\"\"\n",
@@ -244,7 +235,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -258,11 +249,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.8.10"
   },
   "vscode": {
    "interpreter": {
-    "hash": "c1fd8c99ec767a3093790aadbd23b282cb2563d0e033731624352a553ec955a8"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
