Made Code Compactible overall

--- a/wildcard.ipynb
+++ b/wildcard.ipynb
@@ -2,12 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import nltk\n",
-    "import textract\n",
     "from nltk.corpus import *\n",
     "from nltk.stem.porter import *\n",
     "import os\n",
@@ -20,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,32 +41,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def isnumber(token) : \n",
-    "    for char in token :\n",
-    "        if not (char >= '0' and char <= '9') :\n",
+    "def isnumber(token):  \n",
+    "    for char in token:\n",
+    "        if not (char >= '0' and char <= '9'):\n",
     "            return False\n",
     "    return True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "Prefix = Trie()\n",
     "Suffix = Trie()\n",
-    "for sentence in docs : \n",
+    "for sentence in docs: \n",
+    "    sentence = sentence[0]\n",
     "    tokens = nltk.tokenize.word_tokenize(str(sentence))\n",
     "    new_token = list()\n",
     "    for i in tokens:\n",
     "        new_token.append(i.lower())\n",
     "    tokens = new_token\n",
-    "    for words in new_token : \n",
+    "    for words in new_token: \n",
     "        if words in stop_words or len(words) <= 2 or isnumber(words): \n",
     "            continue\n",
     "        Prefix.insert(words)\n",
@@ -91,12 +91,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+    "hash": "c1fd8c99ec767a3093790aadbd23b282cb2563d0e033731624352a553ec955a8"
    }
   }
  },
