Added limit on doc sizes

--- a/tfidf_phrase_query.ipynb
+++ b/tfidf_phrase_query.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 5,
    "id": "b38f957f",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "id": "a43073cf",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "id": "ef365a14",
    "metadata": {},
    "outputs": [],
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "id": "bbde45c4",
    "metadata": {
     "scrolled": true
@@ -156,11 +156,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('for the purposes of this paragraph , we don ’ t consider use of an automobile rented for 30 or fewer days to be regular use.if you are a corporation , unincorporated association , partnership , sole proprietorship , business or other entity , the employee or partner for whose regular use a described automobile is supplied , and their spouse who lives with that person , will be covered when they rent an automobile , under the following conditions : both the rented automobile and the described automobile must not have a manufacturer ’ s gross vehicle weight rating of more than 4,500 kilograms.neither the employee nor partner who is provided with a described automobile , nor their spouses if they live with the employee or partner , are renting the automobile in connection with the business of selling , repairing , maintaining , storing , servicing or parking automobiles . ', '.\\\\Docs\\\\Auto\\\\1215E.2.docx')\n",
+      "('if you are a corporation , unincorporated association , partnership , sole proprietorship , business or other entity , the employee or partner for whose regular use a described automobile is supplied , and their spouse who lives with that person , will be covered when they rent an automobile , under the following conditions : both the rented automobile and the described automobile must not have a manufacturer ’ s gross vehicle weight rating of more than 4,500 kilograms . ', '.\\\\Docs\\\\Auto\\\\1215E.2.docx')\n",
       "\n",
-      "('however , if you drive one of these other automobiles while an excluded driver under the policy for that automobile , this policy will provide liability and uninsured automobile coverages while you drive that automobile.if you are a corporation , unincorporated association , partnership , sole proprietorship , business or other entity , the employee or partner for whose regular use a described automobile is supplied , and their spouse who lives with that person , will be covered when they drive the other automobile , under the following conditions : both the other automobile and the described automobile must not have a manufacturer ’ s gross vehicle weight rating of more than 4,500 kilograms.neither the employee nor partner who is provided with a described automobile , nor their spouses if they live with the employee or partner , are driving the other automobile in connection with the business of selling , repairing , maintaining , storing , servicing or parking automobiles . ', '.\\\\Docs\\\\Auto\\\\1215E.2.docx')\n",
+      "('if you are a corporation , unincorporated association , partnership , sole proprietorship , business or other entity , the employee or partner for whose regular use a described automobile is supplied , and their spouse who lives with that person , will be covered when they drive the other automobile , under the following conditions : both the other automobile and the described automobile must not have a manufacturer ’ s gross vehicle weight rating of more than 4,500 kilograms . ', '.\\\\Docs\\\\Auto\\\\1215E.2.docx')\n",
       "\n",
-      "('virus or similar mechanism program code , programming instruction or any set of instructions with the ability to damage , interfere with , or otherwise adversely affect computer and electronic equipment or data , whether involving self-replication or not , including , but limited to trojan horses , worms and logic bombs.we/us/our the insurers whose identity is stated in the endorsement entitled identity of insurers shown in the schedule.you/your/the policyholder the persons , companies , partnerships or unincorporated associations named in the schedule as the policyholder . ', '.\\\\Docs\\\\Property\\\\eSols Property Owners Commercial Policy Wording 2018 Policies which incepted before 01 July.docx')\n",
+      "('you/your/the policyholder the persons , companies , partnerships or unincorporated associations named in the schedule as the policyholder.property damage section definitions ( also refer to the policy definitions at the front of this policy wording ) the following definitions apply to this section and shall keep the same meaning wherever they appear in the section unless an alternative definition is stated to apply.damage accidental loss , destruction or damage to the property insured . ', '.\\\\Docs\\\\Property\\\\eSols Property Owners Commercial Policy Wording 2018 Policies which incepted before 01 July.docx')\n",
       "\n"
      ]
     }
@@ -199,7 +199,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
