--- a/Query/tfidf_phrase_query.ipynb
+++ b/Query/tfidf_phrase_query.ipynb
@@ -12,20 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "b38f957f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from nltk.tokenize import sent_tokenize, word_tokenize\n",
     "from nltk.corpus import *\n",
     "from nltk.stem.porter import *\n",
-    "import os\n",
-    "from Constants import *\n",
     "import pickle\n",
-    "import gensim \n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
     "from pathlib import Path\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
@@ -44,14 +38,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "a43073cf",
    "metadata": {},
    "outputs": [],
    "source": [
     "stemmer = PorterStemmer()\n",
     "stop_words = set(stopwords.words('english'))\n",
-    "root = Path(\".\")\n",
+    "root = Path(\"../\")\n",
     "\n",
     "my_path = root / \"Pickled_files\" / \"Documents\"\n",
     "dbfile = open(my_path, 'rb')     \n",
@@ -100,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "ef365a14",
    "metadata": {},
    "outputs": [],
@@ -146,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "bbde45c4",
    "metadata": {
     "scrolled": true
